--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -2,9 +2,9 @@ name: Java
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "main" ]
 
 jobs:
   build:
