--- a/cats/presentation/src/main/resources/application.properties
+++ b/cats/presentation/src/main/resources/application.properties
@@ -1,3 +1,17 @@
+spring.application.name=Cats
+
 management.endpoints.web.exposure.include=*
 management.endpoint.shutdown.enabled=true
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/cats
+spring.datasource.username=karim
+spring.datasource.password=123654
+spring.jpa.open-in-view=false
+
+spring.jackson.date-format="yyyy-MM-dd"
+
+server.error.whitelabel.enabled=false
 
