--- a/cats/presentation/src/main/resources/application.properties
+++ b/cats/presentation/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.application.name=Cats
 
+server.port=8080
+
 management.endpoints.web.exposure.include=*
 management.endpoint.shutdown.enabled=true
+management.server.port=9090
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create
@@ -14,4 +17,8 @@ spring.jpa.open-in-view=false
 spring.jackson.date-format="yyyy-MM-dd"
 
 server.error.whitelabel.enabled=false
+
+springdoc.show-actuator=true
+springdoc.use-management-port=true
+
 
