--- a/cats/src/main/resources/application.properties
+++ b/cats/src/main/resources/application.properties
@@ -4,7 +4,8 @@ server.port=8080
 
 management.endpoints.web.exposure.include=*
 management.endpoint.shutdown.enabled=true
-management.server.port=9090
+#management.server.port=9090
+
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create
@@ -18,7 +19,7 @@ spring.jackson.date-format="yyyy-MM-dd"
 
 server.error.whitelabel.enabled=false
 
-springdoc.show-actuator=true
-springdoc.use-management-port=true
+#springdoc.show-actuator=true
+#springdoc.use-management-port=true
 
 
