--- a/cats/src/test/resources/application-test.properties
+++ b/cats/src/test/resources/application-test.properties
@@ -4,5 +4,6 @@ spring.datasource.url=jdbc:hsqldb:mem:testdb;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jackson.date-format="yyyy-MM-dd"
+spring.liquibase.change-log=/db/changelog/db.changelog-master.yaml
 
 
