fix: fix configuration with removing liquibase from default configuration

--- a/cats/src/main/resources/application.properties
+++ b/cats/src/main/resources/application.properties
@@ -14,5 +14,4 @@ spring.jackson.date-format="yyyy-MM-dd"
 server.error.whitelabel.enabled=false
 #springdoc.show-actuator=true
 #springdoc.use-management-port=true
-
-
+spring.liquibase.enabled=false
