feat: add basic auth

--- a/cats/data-access/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/cats/data-access/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,5 @@
 databaseChangeLog:
     -   include:
             file: db/changelog/changes/init.xml
+    -   include:
+            file: db/changelog/changes/add_user.xml
