--- a/cats/src/main/resources/application.properties
+++ b/cats/src/main/resources/application.properties
@@ -4,7 +4,7 @@ management.endpoints.web.exposure.include=*
 management.endpoint.shutdown.enabled=true
 #management.server.port=9090
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/cats
 spring.datasource.username=karim
@@ -14,6 +14,4 @@ spring.jackson.date-format="yyyy-MM-dd"
 server.error.whitelabel.enabled=false
 #springdoc.show-actuator=true
 #springdoc.use-management-port=true
-spring.liquibase.enabled=false
-
-
+#management.endpoints.web.cors.allowed-origins=http://localhost:9090/*
