--- a/cats-microservices/users-service/src/main/resources/application.properties
+++ b/cats-microservices/users-service/src/main/resources/application.properties
@@ -4,7 +4,7 @@ management.endpoints.web.exposure.include=*
 management.endpoint.shutdown.enabled=true
 #management.server.port=9090
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/cats
 spring.datasource.username=karim
